<resources>
    <string name="app_name">CORN_BSS</string>
    <string name="inici">Inici</string>
    <string name="cobrament">Cobrament</string>
    <string name="escanejar">Escanejar</string>
    <string name="historial">Historial</string>
    <string name="perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nom</string>
    <string name="telefono">Telèfon</string>
    <string name="apellido">Cognom</string>
    <string name="correo">Correu</string>
    <string name="contrseña">Contrasenya</string>
    <string name="repetirContrseña">Repetir Contrasenya</string>
</resources>