<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/registerPersonName"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="98dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_person_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerPersonSurname"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="98dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_person_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPersonName" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="98dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPersonSurname" />

    <EditText
        android:id="@+id/registerPhone"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="98dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_phone_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="98dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/contrseña"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPhone" />

    <EditText
        android:id="@+id/registerRepeatPassword"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="98dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/repetirContrseña"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

    <Button
        android:id="@+id/registerRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="76dp"
        android:text="Registra't"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/loginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="76dp"
        android:text="Iniciar Sessió"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="112dp"
        android:layout_height="39dp"
        android:layout_marginStart="166dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="193dp"
        android:text="Registre"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>