<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="231dp"
            android:layout_height="48dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_phone_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:paddingStart="12dp"
            android:hint="@string/telefono"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="231dp"
            android:layout_height="48dp"
            android:layout_marginStart="101dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="101dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_person_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:paddingStart="12dp"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

        <EditText
            android:id="@+id/editTextTextPersonSurname"
            android:layout_width="231dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_person_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:paddingStart="12dp"
            android:hint="@string/apellido"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="231dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonSurname" />

        <Button
            android:id="@+id/sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SYNC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>